--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=8,0,0,0" width="900" height="600" id="gamefile" align="middle">
       <param name="allowScriptAccess" value="always" />
-      <param name="movie" value="riddle-school-3.swf" />
+      <param name="movie" value="430459_Riddle_School_3.swf" />
       <param name="quality" value="high" />
       <param name="wmode" value="window" />
       <param name="allowfullscreen" value="false" />
@@ -48,7 +48,7 @@
       <param name="flashvars" value="gameID=13824" />
       <param name="hasPriority" value="true" />
 
-      <embed src="riddle-school-3.swf" width="100%" height="100%" id="gamefileEmbed" name="gamefile" align="middle" wmode="window" allowfullscreen="false" allowfullscreeninteractive="false" fullScreenAspectRatio="" quality="high" play="true" loop="true" menu="" allowScriptAccess="always" flashvars="gameID=13824" hasPriority="true" type="application/x-shockwave-flash" pluginspage="http://www.adobe.com/go/getflashplayer"></embed>
+      <embed src="430459_Riddle_School_3.swf" width="100%" height="100%" id="gamefileEmbed" name="gamefile" align="middle" wmode="window" allowfullscreen="false" allowfullscreeninteractive="false" fullScreenAspectRatio="" quality="high" play="true" loop="true" menu="" allowScriptAccess="always" flashvars="gameID=13824" hasPriority="true" type="application/x-shockwave-flash" pluginspage="http://www.adobe.com/go/getflashplayer"></embed>
       </object>
 
     </div>
